--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,5 +4,61 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: sans-serif;
 }
 
+header{
+    background-color: rgb(52, 113, 247);
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+.container-main{
+    width: 90%;
+    margin: auto;
+}
+
+.container-main img{
+    width: 80%;
+}
+
+.fa-bars{
+    color: white;
+}
+
+.clearfix{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px){
+    .nav-list{
+        display: none;
+    }
+}
+@media screen and (min-width: 769px){
+    
+    .burgher{
+       display: none; 
+    }
+
+    .container-main{
+        width: 60%;
+
+    }
+
+    .nav-list button{
+        padding: 7px 9px;
+        border-radius: 20px;
+        border: none;
+    }
+    
+    .nav-list li{
+        margin: 0 10px;
+        color: white;
+        font-size: 0.9rem;
+    }
+}
